--- a/.github/workflows/job.yaml
+++ b/.github/workflows/job.yaml
@@ -4,5 +4,5 @@ jobs:
     build: 
         run-on: ubuntu-latest
         steps:
-            - user: actions/checkout@v2
+            - uses: actions/checkout@v2
             - run: docker exec backend-desafio-5 npm run test
