--- a/.github/workflows/job.yaml
+++ b/.github/workflows/job.yaml
@@ -5,4 +5,4 @@ jobs:
         runs-on: ubuntu-latest
         steps:
             - uses: actions/checkout@v2
-            - run: docker exec bearamos/backend-desafio-5 npm run test
+            - run: npm run test
